Start writing blog post

--- a/_posts/2017-9-25-iskoras.md
+++ b/_posts/2017-9-25-iskoras.md
@@ -1,10 +1,37 @@
 ---
 layout: post
-title: You're up and running!
+title: Fieldwork in Iskoras
 ---
 
-Next you can update your site name, avatar and other options using the _config.yml file in the root of your repository (shown below).
+At the beginning of September I was lucky enough to join Hanna and her team at their field site in Northern Norway. In this area, permafrost is only found in the lowlands. Hanna chose a typical lowland site to study, and named it 'Iskoras' after the hill nearby.
 
-![_config.yml]({{ site.baseurl }}/images/config.png)
+This place is a long way from anywhere I would normally find myself, both physically and metaphorically! After flying to Tromsø in a fairly small plane, we transferred to an even smaller one to make the hop to Lakselv, which is a tiny town which nonetheless (surprisingly) has a 'Vinmonopolet'* so we could buy wine for the week! After this, we drove for an hour to reach our campsite (where we stayed in a cosy cabin), and another 40 minutes drive took us out into what seemed like the middle of nowhere. This is a landscape of rolling hills blanketed in small birch trees, opening out now and then into patches of Arctic tundra, with the trees already turning yellow for autumn. The road became a gravel track, and eventually we had to leave the car and hike for the last two kilometers to the field site itself.
 
-The easiest way to make your first post is to edit this one. Go into /_posts/ and update the Hello World markdown file. For more instructions head over to the [Jekyll Now repository](https://github.com/barryclark/jekyll-now) on GitHub.
+Iskoras is a typical permafrost palsa mire. It's a patchy landscape with wet, boggy ponds interlaced by dry, raised plateaus called *palsas*. There's a lot going on here. There's permafrost inside the palsa mounds, but not in the ponds and wet places. When permafrost inside a palsa thaws, the whole thing collapses to form a pond. Occasionally, new palsas can be raised up and new permafrost can form. This is a dynamic landscape, where the ground can change visibly from one year to the next.
+
+So this is a very interesting site scientifically. Mainly because of the permafrost carbon feedback in general but there's also just a lot going on here. In one location you have lots of differerent conditions so it's perfect for testing out how things change when it's wetter or drier. Sebastian's team is studying the landscape dynamics and they were wandering around the site with a gps and altometer, and occasionally a small boat.
+
+There was lots to do in the few days that we had to work.
+
+* A note about Vinmonopolet :P
+
+A First Level Header
+====================
+
+A Second Level Header
+---------------------
+
+Now is the time for all good men to come to
+the aid of their country. This is just a
+regular paragraph.
+
+The quick brown fox jumped over the lazy
+dog's back.
+
+### Header 3
+
+> This is a blockquote.
+> 
+> This is the second paragraph in the blockquote.
+>
+> ## This is an H2 in a blockquote
