testing image sizing methods

--- a/_posts/2017-9-25-iskoras.md
+++ b/_posts/2017-9-25-iskoras.md
@@ -13,7 +13,9 @@ This makes it very interesting to study. For one thing, there's a lot of carbon 
 
 There was lots to do in the few days that we had to work. Our group consisted of Hanna - group leader, Casper - postdoc in charge of the site, Renee, a second year undergraduate student from Canada with incredible technical skills, and me - a modeller with basically no experience of fieldwork. Hanna bought us all bright orange 'safety hats' since it was the hunting season and she didn't want any of us getting shot. Here's a picture of us all with the safety hats:
 
-![Test image](https://raw.githubusercontent.com/semiupsidedown/semiupsidedown.github.io/master/images/profile_pic.png)
+![Test image](https://raw.githubusercontent.com/semiupsidedown/semiupsidedown.github.io/master/images/DSC_0831.JPG)
+<img src="https://raw.githubusercontent.com/semiupsidedown/semiupsidedown.github.io/master/images/DSC_0831.JPG" width="48">
+<a href="url"><img src="https://raw.githubusercontent.com/semiupsidedown/semiupsidedown.github.io/master/images/DSC_0831.JPG" align="left" height="48" width="48" ></a>
 
 We replaced faulty equipment, installed a bunch of new stuff, and took manual measurements in places without automatic monitoring. I was excited to discover that physics worked the way I thought it did, and to make some plots of carbon dioxide emissions. I was also given 'useful' jobs to keep me out of trouble...
 
