exclamation marks suck

--- a/_posts/2017-9-25-iskoras.md
+++ b/_posts/2017-9-25-iskoras.md
@@ -5,7 +5,7 @@ title: Fieldwork in Iskoras
 
 At the beginning of September I joined Hanna and her team at their field site in Northern Norway. The team has set up a study site in the lowlands - where permafrost is found - and named it 'Iskoras' after the hill nearby.
 
-This place is a long way from anywhere I would normally find myself, both physically and metaphorically! After flying to Tromsø in a fairly small plane, we transferred to an even smaller one to make the hop to Lakselv, which is a tiny town which nonetheless (surprisingly) has a 'Vinmonopolet' so we could buy wine for the week! After this, we drove for an hour to reach our campsite, where we stayed in a cosy cabin. Another 40 minutes drive took us out into what seemed like the middle of nowhere. This is a landscape of rolling hills blanketed in small birch trees, opening out now and then into patches of Arctic tundra, with the trees already turning yellow for autumn. The road became a gravel track, and eventually we had to leave the car and hike for the last two kilometers to the field site itself.
+This place is a long way from anywhere I would normally find myself, both physically and metaphorically. After flying to Tromsø in a fairly small plane, we transferred to an even smaller one to make the hop to Lakselv, which is a tiny town which nonetheless (surprisingly) has a 'Vinmonopolet' so we could buy wine for the week. After this, we drove for an hour to reach our campsite, where we stayed in a cosy cabin. Another 40 minutes drive took us out into what seemed like the middle of nowhere. This is a landscape of rolling hills blanketed in small birch trees, opening out now and then into patches of Arctic tundra, with the trees already turning yellow for autumn. The road became a gravel track, and eventually we had to leave the car and hike for the last two kilometers to the field site itself.
 
 Iskoras is a typical permafrost palsa mire. It's a patchy landscape with wet, boggy ponds interlaced by dry, raised plateaus called *palsas*. There's a lot going on here. There's permafrost inside the palsa mounds, but not in the ponds. When permafrost inside a palsa thaws, the whole thing collapses to form a pond. Occasionally, new palsas can be raised up and new permafrost can form. This is a dynamic landscape, where the ground can change visibly from one year to the next.
 
@@ -19,6 +19,6 @@ We replaced faulty equipment, installed a bunch of new stuff, and took manual me
 
 <img src="https://raw.githubusercontent.com/semiupsidedown/semiupsidedown.github.io/master/images/DSC_0831.JPG" width="480">
 
-By the time we left, the automatic monitoring equipment was all up and running, and connected to a router so the data can actually be downloaded now we are back at our desks! We had also carried a lot of heavy boxes and bits and pieces in and out of the site, and I am reliably informed, all of the wine was finished off. A successful trip and exciting prospects to do some modelling here too.
+By the time we left, the automatic monitoring equipment was all up and running, and connected to a router so the data can actually be downloaded now we are back at our desks. We had also carried a lot of heavy boxes and bits and pieces in and out of the site, and I am reliably informed, all of the wine was finished off. A successful trip and exciting prospects to do some modelling here too.
 
 It was great to be out in the field instead of the office for the week, commuting to work through shrub tundra, snacking on wild cloudberries and blueberries, surrounded by autumn colours hinting to the coming winter.
